# 3DGraphics

./: CMakeLists.txt  Camera.h  Object.h  README.md  main.cpp
data/: BaseV1.mtl  CubeMap.mtl  TabletteV1.mtl  particle.mtl  pirate_ship2V1.mtl  pirate_ship4V1.mtl
